crates/solidity-v2/testing/snapshots/cst_output/YulVariableAssignmentStatement/colon_equal_separated/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected UNRECOGNIZED. One of YulBreakKeyword_Reserved, YulCloseBrace, YulColonEqual, YulComma, YulContinueKeyword_Reserved, YulDecimalLiteral, YulFalseKeyword_Reserved, YulForKeyword_Reserved, YulFunctionKeyword_Reserved, YulHexLiteral, YulHexStringLiteral, YulIdentifier, YulIfKeyword_Reserved, YulLeaveKeyword_Reserved, YulLetKeyword_Reserved, YulOpenBrace, YulOpenParen, YulPeriod, YulStringLiteral, YulSwitchKeyword_Reserved, YulTrueKeyword_Reserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/YulVariableAssignmentStatement/colon_equal_separated/input.sol:6:5 ]
   │
 6 │ foo : = 0
   │     ┬  
   │     ╰── Error occurred here.
───╯
